--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+:root{
+    --text-color:#ff6363;
+    --card-front-color: rgb(252, 252, 252);
+    --card-back-color: #ffffff;
+}
+
 body {
     background-color: #fae9e9;
     color: rgb(0, 0, 0); 
     font-family: sans-serif;
+}
+.cartao__conteudo{
+    background-color: #ff6363;
+    text-align: center;
+    height: 100%;
 }
 footer{
     background-color: #ff6363;
