--- a/style.css
+++ b/style.css
@@ -14,6 +14,29 @@ body {
     text-align: center;
     height: 100%;
 }
+#container{
+    display: flex;
+    flex-wrap: wrap;
+}
+.cartao {
+    margin: 1rem 1rem;
+    background-color: aliceblue;
+    heigth: 20rem;
+    flex-grow: 1;
+    flex-basis: calc(33% - 6rem);
+}
+.cartao__conteudo p {
+    padding: 4rem;
+}
+.cartao__conteudo h3 {
+    background-color: rgb(83, 210, 241) ;
+    text-align: left;
+    padding: 0.5rem;
+    position: absolute;
+    margin: 0.6rem;
+    border-radius: 0.6rem;
+    font-size: 1vw;
+}
 footer{
     background-color: #ff6363;
     color: rgb(252, 252, 252);
@@ -24,13 +47,6 @@ footer{
 }
 footer p {
     text-align: center;
-    font-size: 0.6rem;
-    margin-top: o.5rem;
-}
-#container{
-    display: flex;
-}
-.cartao {
-    margin: 1rem 1rem;
-    background-color: aliceblue;
+    font-size: 0.9rem;
+    margin-top: 0.8rem;
 }
